@@ -63,6 +63,7 @@ import org.apache.catalina.tribes.transport.nio.NioReceiver;
 import org.apache.catalina.util.ServerInfo;
 import org.apache.catalina.valves.AccessLogValve;
 import org.apache.catalina.webresources.StandardRoot;
+import org.apache.coyote.http2.Http2Protocol;
 import org.apache.ofbiz.base.component.ComponentConfig;
 import org.apache.ofbiz.base.concurrent.ExecutionPool;
 import org.apache.ofbiz.base.container.Container;
@@ -102,7 +103,7 @@ public class CatalinaContainer implements Container {
     public void init(List<StartupCommand> ofbizCommands, String name, String configFile) throws ContainerException {
 
         this.name = name;
-        ContainerConfig.Configuration configuration = ContainerConfig.getConfiguration(name, configFile);
+        ContainerConfig.Configuration configuration = ContainerConfig.getConfiguration(name);
         Property engineConfig = retrieveTomcatEngineConfig(configuration);
 
         // tomcat setup
@@ -131,6 +132,7 @@ public class CatalinaContainer implements Container {
         loadWebapps(tomcat, configuration, clusterProps);
     }
 
+    @Override
     public boolean start() throws ContainerException {
         try {
             tomcat.start();
@@ -146,7 +148,8 @@ public class CatalinaContainer implements Container {
         return true;
     }
 
-    public void stop() throws ContainerException {
+    @Override
+    public void stop() {
         try {
             tomcat.stop();
         } catch (LifecycleException e) {
@@ -156,11 +159,12 @@ public class CatalinaContainer implements Container {
         }
     }
 
+    @Override
     public String getName() {
         return name;
     }
 
-    private Property retrieveTomcatEngineConfig(ContainerConfig.Configuration cc) throws ContainerException {
+    private static Property retrieveTomcatEngineConfig(ContainerConfig.Configuration cc) throws ContainerException {
         List<ContainerConfig.Configuration.Property> engineProps = cc.getPropertiesWithValue("engine");
         if (UtilValidate.isEmpty(engineProps)) {
             throw new ContainerException("Cannot load CatalinaContainer; no engines defined.");
@@ -171,7 +175,7 @@ public class CatalinaContainer implements Container {
         return engineProps.get(0);
     }
 
-    private Tomcat prepareTomcatServer(ContainerConfig.Configuration cc,
+    private static Tomcat prepareTomcatServer(ContainerConfig.Configuration cc,
             ContainerConfig.Configuration.Property engineConfig) throws ContainerException {
 
         System.setProperty(Globals.CATALINA_HOME_PROP, System.getProperty("ofbiz.home") + "/" +
@@ -201,7 +205,7 @@ public class CatalinaContainer implements Container {
         return tomcat;
     }
 
-    private Engine prepareTomcatEngine(Tomcat tomcat, Property engineConfig) {
+    private static Engine prepareTomcatEngine(Tomcat tomcat, Property engineConfig) {
         Engine engine = tomcat.getEngine();
         engine.setName(engineConfig.name);
 
@@ -214,11 +218,14 @@ public class CatalinaContainer implements Container {
         return engine;
     }
 
-    private Host prepareHost(Tomcat tomcat, List<String> virtualHosts) {
+    private static Host prepareHost(Tomcat tomcat, List<String> virtualHosts) {
         Host host;
 
         if (UtilValidate.isEmpty(virtualHosts)) {
-            host = tomcat.getHost();
+            host = (Host) tomcat.getEngine().findChild(tomcat.getEngine().getDefaultHost());
+            if(host == null) {
+                host = tomcat.getHost();
+            }
         } else {
             host = prepareVirtualHost(tomcat, virtualHosts);
         }
@@ -233,7 +240,7 @@ public class CatalinaContainer implements Container {
         return host;
     }
 
-    private Host prepareVirtualHost(Tomcat tomcat, List<String> virtualHosts) {
+    private static Host prepareVirtualHost(Tomcat tomcat, List<String> virtualHosts) {
         // assume that the first virtual-host will be the default; additional virtual-hosts will be aliases
         String hostName = virtualHosts.get(0);
         Host host;
@@ -255,7 +262,7 @@ public class CatalinaContainer implements Container {
         return host;
     }
 
-    private Property prepareTomcatClustering(Host host, Property engineConfig) throws ContainerException {
+    private static Property prepareTomcatClustering(Host host, Property engineConfig) throws ContainerException {
         Property clusterProp = null;
 
         List<Property> clusterProps = engineConfig.getPropertiesWithValue("cluster");
@@ -284,7 +291,7 @@ public class CatalinaContainer implements Container {
         return clusterProp;
     }
 
-    private NioReceiver prepareChannelReceiver(Property clusterProp) throws ContainerException {
+    private static NioReceiver prepareChannelReceiver(Property clusterProp) throws ContainerException {
         NioReceiver listener = new NioReceiver();
 
         String tla = ContainerConfig.getPropertyValue(clusterProp, "tcp-listen-host", "auto");
@@ -305,11 +312,11 @@ public class CatalinaContainer implements Container {
         return listener;
     }
 
-    private ReplicationTransmitter prepareChannelSender(Property clusterProp) throws ContainerException {
+    private static ReplicationTransmitter prepareChannelSender(Property clusterProp) throws ContainerException {
         ReplicationTransmitter trans = new ReplicationTransmitter();
         try {
             MultiPointSender mps = (MultiPointSender)Class.forName(ContainerConfig.getPropertyValue(clusterProp,
-                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).newInstance();
+                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).getDeclaredConstructor().newInstance();
             trans.setTransport(mps);
         } catch (Exception exc) {
             throw new ContainerException("Cluster configuration requires a valid replication-mode property: " + exc.getMessage());
@@ -317,7 +324,7 @@ public class CatalinaContainer implements Container {
         return trans;
     }
 
-    private McastService prepareChannelMcastService(Property clusterProp) throws ContainerException {
+    private static McastService prepareChannelMcastService(Property clusterProp) throws ContainerException {
         McastService mcast = new McastService();
 
         String mcb = ContainerConfig.getPropertyValue(clusterProp, "mcast-bind-addr", null);
@@ -342,23 +349,23 @@ public class CatalinaContainer implements Container {
         return mcast;
     }
 
-    private ClusterManager prepareClusterManager(Property clusterProp) throws ContainerException {
+    private static ClusterManager prepareClusterManager(Property clusterProp) throws ContainerException {
         String mgrClassName = ContainerConfig.getPropertyValue(clusterProp, "manager-class", "org.apache.catalina.ha.session.DeltaManager");
         try {
-            return (ClusterManager)Class.forName(mgrClassName).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            return (ClusterManager)Class.forName(mgrClassName).getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             throw new ContainerException("Cluster configuration requires a valid manager-class property", e);
         }
     }
 
-    private ReplicationValve prepareClusterValve(Property clusterProp) {
+    private static ReplicationValve prepareClusterValve(Property clusterProp) {
         ReplicationValve clusterValve = new ReplicationValve();
         String defaultValveFilter = ".*\\.gif;.*\\.js;.*\\.jpg;.*\\.htm;.*\\.html;.*\\.txt;.*\\.png;.*\\.css;.*\\.ico;.*\\.htc;";
         clusterValve.setFilter(ContainerConfig.getPropertyValue(clusterProp, "rep-valve-filter", defaultValveFilter));
         return clusterValve;
     }
 
-    private List<Valve> prepareTomcatEngineValves(Property engineConfig) throws ContainerException {
+    private static List<Valve> prepareTomcatEngineValves(Property engineConfig) throws ContainerException {
         List<Valve> engineValves = new ArrayList<>();
 
         // configure the CrossSubdomainSessionValve
@@ -403,7 +410,7 @@ public class CatalinaContainer implements Container {
         return engineValves;
     }
 
-    private List<Connector> prepareTomcatConnectors(Configuration configuration) throws ContainerException {
+    private static List<Connector> prepareTomcatConnectors(Configuration configuration) throws ContainerException {
         List<Property> connectorProps = configuration.getPropertiesWithValue("connector");
         if (UtilValidate.isEmpty(connectorProps)) {
             throw new ContainerException("Cannot load CatalinaContainer; no connectors defined!");
@@ -414,12 +421,15 @@ public class CatalinaContainer implements Container {
             .collect(Collectors.toList());
     }
 
-    private Connector prepareConnector(Property connectorProp) {
+    private static Connector prepareConnector(Property connectorProp) {
         Connector connector = new Connector(ContainerConfig.getPropertyValue(connectorProp, "protocol", "HTTP/1.1"));
         connector.setPort(ContainerConfig.getPropertyValue(connectorProp, "port", 0) + Start.getInstance().getConfig().portOffset);
-
+        if ("true".equals(ContainerConfig.getPropertyValue(connectorProp, "upgradeProtocol", "false"))) {
+            connector.addUpgradeProtocol(new Http2Protocol());
+            Debug.logInfo("Tomcat " + connector + ": enabled HTTP/2", module);
+        }
         connectorProp.properties.values().stream()
-            .filter(prop -> !"protocol".equals(prop.name) && !"port".equals(prop.name))
+            .filter(prop -> !"protocol".equals(prop.name) && !"upgradeProtocol".equals(prop.name) && !"port".equals(prop.name))
             .forEach(prop -> {
                 if (IntrospectionUtils.setProperty(connector, prop.name, prop.value)) {
                     if (prop.name.indexOf("Pass") != -1) {
@@ -435,7 +445,7 @@ public class CatalinaContainer implements Container {
         return connector;
     }
 
-    private void loadWebapps(Tomcat tomcat, ContainerConfig.Configuration configuration, Property clusterProp) {
+    private static void loadWebapps(Tomcat tomcat, ContainerConfig.Configuration configuration, Property clusterProp) {
         ScheduledExecutorService executor = ExecutionPool.getScheduledExecutor(new ThreadGroup(module),
                 "catalina-startup", Runtime.getRuntime().availableProcessors(), 0, true);
         List<Future<Context>> futures = new ArrayList<>();
@@ -463,7 +473,7 @@ public class CatalinaContainer implements Container {
         executor.shutdown();
     }
 
-    private List<String> getWebappMounts(ComponentConfig.WebappInfo webappInfo) {
+    private static List<String> getWebappMounts(ComponentConfig.WebappInfo webappInfo) {
         List<String> allAppsMounts = new ArrayList<>();
         String engineName = webappInfo.server;
         String mount = webappInfo.getContextRoot();
@@ -476,22 +486,21 @@ public class CatalinaContainer implements Container {
         return allAppsMounts;
     }
 
-    private Callable<Context> createCallableContext(Tomcat tomcat, ComponentConfig.WebappInfo appInfo,
+    private static Callable<Context> createCallableContext(Tomcat tomcat, ComponentConfig.WebappInfo appInfo,
             Property clusterProp, ContainerConfig.Configuration configuration) {
 
         Debug.logInfo("Creating context [" + appInfo.name + "]", module);
         Host host = prepareHost(tomcat, appInfo.getVirtualHosts());
 
-        return new Callable<Context>() {
-            public Context call() throws ContainerException, LifecycleException {
-                StandardContext context = prepareContext(host, configuration, appInfo, clusterProp);
-                host.addChild(context);
-                return context;
-            }
+        return () -> {
+            StandardContext context = prepareContext(host, configuration, appInfo, clusterProp);
+            Debug.logInfo("host[" + host + "].addChild(" + context + ")", module);
+            host.addChild(context);
+            return context;
         };
     }
 
-    private StandardContext prepareContext(Host host, ContainerConfig.Configuration configuration,
+    private static StandardContext prepareContext(Host host, ContainerConfig.Configuration configuration,
             ComponentConfig.WebappInfo appInfo, Property clusterProp) throws ContainerException {
 
         StandardContext context = new StandardContext();
@@ -502,12 +511,12 @@ public class CatalinaContainer implements Container {
 
         context.setParent(host);
         context.setDocBase(location);
+        context.setDisplayName(appInfo.name);
         context.setPath(getWebappMountPoint(appInfo));
         context.addLifecycleListener(new ContextConfig());
         context.setJ2EEApplication("OFBiz");
         context.setJ2EEServer("OFBiz Container");
         context.setLoader(new WebappLoader(Thread.currentThread().getContextClassLoader()));
-        context.setDisplayName(appInfo.name);
         context.setDocBase(location);
         context.setReloadable(ContainerConfig.getPropertyValue(configuration, "apps-context-reloadable", false));
         context.setDistributable(contextIsDistributable);
@@ -551,7 +560,7 @@ public class CatalinaContainer implements Container {
         return context;
     }
 
-    private String getWebappRootLocation(ComponentConfig.WebappInfo appInfo) {
+    private static String getWebappRootLocation(ComponentConfig.WebappInfo appInfo) {
         String location = appInfo.componentConfig.getRootLocation() + appInfo.location;
         location = location.replace('\\', '/');
         if (location.endsWith("/")) {
@@ -560,7 +569,7 @@ public class CatalinaContainer implements Container {
         return location;
     }
 
-    private String getWebappMountPoint(ComponentConfig.WebappInfo appInfo) {
+    private static String getWebappMountPoint(ComponentConfig.WebappInfo appInfo) {
         String mount = appInfo.mountPoint;
         if (mount.endsWith("/*")) {
             mount = mount.substring(0, mount.length() - 2);
@@ -568,7 +577,8 @@ public class CatalinaContainer implements Container {
         return mount;
     }
 
-    private boolean isContextDistributable(ContainerConfig.Configuration configuration, String location) throws ContainerException {
+    private static boolean isContextDistributable(ContainerConfig.Configuration configuration, String location)
+            throws ContainerException {
         String webXmlFilePath = new StringBuilder().append("file:///").append(location).append("/WEB-INF/web.xml").toString();
         boolean appIsDistributable = ContainerConfig.getPropertyValue(configuration, "apps-distributable", true);
         try {
